[package]
name = "phoenix-vaults"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "phoenix_vaults"

[features]
no-entrypoint = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = { version = "0.29.0" , features = ["token", "associated_token"], default = false }
bytemuck = "1.14.0"
static_assertions = "1.1.0"
uint = "0.9.1"
num-traits = "0.2.15"
drift-macros = { git = "https://github.com/drift-labs/drift-macros.git", rev = "c57d87" }
borsh = "0.10.3"
solana-program = "1.16"
solana-address-lookup-table-program = "1.16"
phoenix-common = { version = "0.2.1", features = [ "no-entrypoint" ]}
lib-sokoban = "=0.3.0"
heapless = "0.8.0"

[dev-dependencies]
anyhow = "1"
solana-client = "^1.18"
solana-sdk = "^1.18"
spl-associated-token-account = "2.3.0"
tokio = "1.40.0"